--- a/grfext.dtx
+++ b/grfext.dtx
@@ -124,9 +124,9 @@ and the derived files
   \file{grfext.drv}{\from{grfext.dtx}{driver}}%
   \usedir{tex/latex/oberdiek}%
   \file{grfext.sty}{\from{grfext.dtx}{package}}%
-  \usedir{doc/latex/oberdiek/test}%
-  \file{grfext-test1.tex}{\from{grfext.dtx}{test1}}%
-  \file{grfext-test2.tex}{\from{grfext.dtx}{test2}}%
+%  \usedir{doc/latex/oberdiek/test}%
+%  \file{grfext-test1.tex}{\from{grfext.dtx}{test1}}%
+%  \file{grfext-test2.tex}{\from{grfext.dtx}{test2}}%
   \nopreamble
   \nopostamble
   \usedir{source/latex/oberdiek/catalogue}%
