don't build xml catalogue files

--- a/grfext.dtx
+++ b/grfext.dtx
@@ -129,8 +129,8 @@ and the derived files
 %  \file{grfext-test2.tex}{\from{grfext.dtx}{test2}}%
   \nopreamble
   \nopostamble
-  \usedir{source/latex/oberdiek/catalogue}%
-  \file{grfext.xml}{\from{grfext.dtx}{catalogue}}%
+%  \usedir{source/latex/oberdiek/catalogue}%
+%  \file{grfext.xml}{\from{grfext.dtx}{catalogue}}%
 }
 
 \catcode32=13\relax% active space
