markup \url{... ctan archive path } links as \CTANpkg using the /pkg URL as definition

--- a/grfext.dtx
+++ b/grfext.dtx
@@ -938,7 +938,7 @@ and the derived files
 % \subsection{Download}
 %
 % \paragraph{Package.} This package is available on
-% CTAN\footnote{\url{https://ctan.org/pkg/grfext}}:
+% CTAN\footnote{\CTANpkg{grfext}}:
 % \begin{description}
 % \item[\CTAN{macros/latex/contrib/oberdiek/grfext.dtx}] The source file.
 % \item[\CTAN{macros/latex/contrib/oberdiek/grfext.pdf}] Documentation.
