--- a/grfext.dtx
+++ b/grfext.dtx
@@ -4,9 +4,9 @@
 % Version: 2016/05/16 v1.2
 % Info: Manage graphics extensions
 %
-% Copyright (C) 2007, 2010 by
-%    Heiko Oberdiek <heiko.oberdiek at googlemail.com>
-%    2016
+% Copyright (C)
+%    2007, 2010 Heiko Oberdiek
+%    2016-2019 Oberdiek Package Support Group
 %    https://github.com/ho-tex/oberdiek/issues
 %
 % This work may be distributed and/or modified under the
@@ -96,8 +96,9 @@ This is a generated file.
 Project: grfext
 Version: 2016/05/16 v1.2
 
-Copyright (C) 2007, 2010 by
-   Heiko Oberdiek <heiko.oberdiek at googlemail.com>
+Copyright (C)
+   2007, 2010 Heiko Oberdiek
+   2016-2019 Oberdiek Package Support Group
 
 This work may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either
