tests not extracted

--- a/grfext.dtx
+++ b/grfext.dtx
@@ -27,8 +27,7 @@
 %
 % This work consists of the main source file grfext.dtx
 % and the derived files
-%    grfext.sty, grfext.pdf, grfext.ins, grfext.drv, grfext-test1.tex,
-%    grfext-test2.tex.
+%    grfext.sty, grfext.pdf, grfext.ins, grfext.drv,
 %
 % Distribution:
 %    CTAN:macros/latex/contrib/grfext/grfext.dtx
@@ -117,8 +116,7 @@ https://github.com/ho-tex/grfext/issues
 
 This work consists of the main source file grfext.dtx
 and the derived files
-   grfext.sty, grfext.pdf, grfext.ins, grfext.drv, grfext-test1.tex,
-   grfext-test2.tex.
+   grfext.sty, grfext.pdf, grfext.ins, grfext.drv.
 
 \endpreamble
 \let\MetaPrefix\DoubleperCent
