missing equals sign and small typos

--- a/grfext.dtx
+++ b/grfext.dtx
@@ -52,7 +52,7 @@
 %    use A4 as paper format:
 %       \PassOptionsToClass{a4paper}{article}
 %
-%    Programm calls to get the documentation (example):
+%    Program calls to get the documentation (example):
 %       pdflatex grfext.dtx
 %       makeindex -s gind.ist grfext.idx
 %       pdflatex grfext.dtx
@@ -213,7 +213,7 @@ and the derived files
 % entries are file name extensions including the dot.
 % But first the entries are removed from
 % \xpackage{graphics}' extension list to avoid multiple
-% occurences of the same extension.
+% occurrences of the same extension.
 %
 % Then macro \cs{AppendGraphicsExtensions} adds the entries
 % after the end of \xpackage{graphics}' list, whereas
@@ -228,7 +228,7 @@ and the derived files
 %
 % \begin{declcs}{RemoveGraphicsExtensions} \M{ext-list}
 % \end{declcs}
-% All occurences of file extensions in \meta{ext-list} are
+% All occurrences of file extensions in \meta{ext-list} are
 % removed from \xpackage{graphics}' extension list.
 %
 % \subsection{Package loading}
@@ -260,7 +260,7 @@ and the derived files
 %   |AppendGraphicsExtensions={|\meta{ext-list}|}|\\
 %   |AppendGraphicsExtensions*={|\meta{ext-list}|}|\\
 %   |PrependGraphicsExtensions={|\meta{ext-list}|}|\\
-%   |PrependGraphicsExtensions*{|\meta{ext-list}|}|\\
+%   |PrependGraphicsExtensions*={|\meta{ext-list}|}|\\
 %   |RemoveGraphicsExtensions={|\meta{ext-list}|}|\\
 %   |PrintGraphicsExtensions|
 % \end{quote}
@@ -295,7 +295,7 @@ and the derived files
 %<*package>
 %    \end{macrocode}
 %
-% \subsection{Relead check and identification}
+% \subsection{Reload check and identification}
 %    Reload check, especially if the package is not used with \LaTeX.
 %    \begin{macrocode}
 \begingroup\catcode61\catcode48\catcode32=10\relax%
