--- a/grfext.dtx
+++ b/grfext.dtx
@@ -1,12 +1,12 @@
 % \iffalse meta-comment
 %
 % File: grfext.dtx
-% Version: 2019/12/03 v1.3
+% Version: 2024-08-10 v1.4
 % Info: Manage graphics extensions
 %
 % Copyright (C)
 %    2007, 2010 Heiko Oberdiek
-%    2016-2019 Oberdiek Package Support Group
+%    2016-2024 Oberdiek Package Support Group
 %    https://github.com/ho-tex/grfext/issues
 %
 % This work may be distributed and/or modified under the
@@ -79,7 +79,7 @@
 \input docstrip.tex
 \Msg{************************************************************************}
 \Msg{* Installation}
-\Msg{* Package: grfext 2019/12/03 v1.3 Manage graphics extensions (HO)}
+\Msg{* Package: grfext 2024-08-10 v1.4 Manage graphics extensions (HO)}
 \Msg{************************************************************************}
 
 \keepsilent
@@ -91,11 +91,11 @@
 This is a generated file.
 
 Project: grfext
-Version: 2019/12/03 v1.3
+Version: 2024-08-10 v1.4
 
 Copyright (C)
    2007, 2010 Heiko Oberdiek
-   2016-2019 Oberdiek Package Support Group
+   2016-2024 Oberdiek Package Support Group
 
 This work may be distributed and/or modified under the
 conditions of the LaTeX Project Public License, either
@@ -155,7 +155,7 @@ and the derived files
 %<*driver>
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesFile{grfext.drv}%
-  [2019/12/03 v1.3 Manage graphics extensions (HO)]%
+  [2024-08-10 v1.4 Manage graphics extensions (HO)]%
 \documentclass{ltxdoc}
 \usepackage{holtxdoc}[2011/11/22]
 \begin{document}
@@ -169,7 +169,7 @@ and the derived files
 % \GetFileInfo{grfext.drv}
 %
 % \title{The \xpackage{grfext} package}
-% \date{2019/12/03 v1.3}
+% \date{2024-08-10 v1.4}
 % \author{Heiko Oberdiek\thanks
 % {Please report any issues at \url{https://github.com/ho-tex/grfext/issues}}}
 %
@@ -367,7 +367,7 @@ and the derived files
   \fi
 \expandafter\x\csname ver@grfext.sty\endcsname
 \ProvidesPackage{grfext}%
-  [2019/12/03 v1.3 Manage graphics extensions (HO)]%
+  [2024-08-10 v1.4 Manage graphics extensions (HO)]%
 %    \end{macrocode}
 %
 % \subsection{Catcodes}
@@ -807,6 +807,9 @@ and the derived files
 %   \begin{Version}{2019/12/03 v1.3}
 %   \item
 %     Documentation updates.
+%   \end{Version}
+%   \begin{Version}{2024-08-10 v1.4}
+%   \item Documentation updates.
 %   \end{Version}
 % \end{History}
 %
